Thu Mar 14 17:09:52 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c (gdk_window_process_all_updates): Fix rather
	improbable reentrancy problem if a window is destroyed
	while updates are being processed on another window. (Noticed
	by Michael Meeks, #74708)

2002-03-14 Vitaly Tishkov <tvv@sparc.spb.su>

        * gtk/gtktreemodelsort.c
	typo in docs for gtk_tree_model_sort_convert_iter_to_child_iter() fixed


Thu Mar 14 11:17:18 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkkeyhash.c (_gtk_key_hash_remove_entry): When
	removing keys from the key hash, reinsert the right list
	back into the hash. (Dave Camp, #74571)

Wed Mar 13 17:17:40 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkobject.h: Remove left-over GTK_OBJECT_CONNECTED
	macro that was defined in terms of the now-gone GTK_CONNECTED
	flag. (Seth Burgess, #74028)

Wed Mar 13 17:11:10 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccelgroup.c (accel_group_weak_ref_detach): Unset 
	the acceleratable_groups qdata because qdata isn't removed
	on ->dispose but rather on ->finalize. (#74569, found
	by Matt Wilson.)

Tue Mar 12 23:14:23 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeselection.c (gtk_tree_selection_unselect_iter): Fix
	cut-n-paste bug.

Sat Mar  9 18:23:25 2002  Richard Hestilow  <hestilow@ximian.com>

	* gtk/gtkimage.c (gtk_image_set_from_filename): Allow NULL
	filenames.
	
Tue Mar 12 10:50:09 2002  Owen Taylor  <otaylor@redhat.com>

	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_filter_keypress):
	Fix incorrect return value, filter out returns of 0x7f for
	the delete key. (#74179, Kang Jeong-He)

Mon Mar 11 23:42:11 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreemodel.c (gtk_tree_model_foreach): fix totally broken
	foreach function.

2002-03-11  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkitemfactory.c (gtk_item_factory_add_foreign): Document
	gtk_{menu_item,widget}_set_accel_path() as the recommended API.  
	(#69244)
